fix: remove unnecessary classes

--- a/src/twemoji.html
+++ b/src/twemoji.html
@@ -21,7 +21,7 @@
             placeholder="Insert Skill"
             maxlength="40"
             type="text"
-            class="border-4 border-solid border-green-400 p-2 text-lg required:border-red-400"
+            class="border-4 border-solid border-green-400 p-2 text-lg"
           />
         </div>
         <select class="skilllist border-4">
@@ -38,11 +38,10 @@
       <div
         class="flex justify-between border-8 border-solid border-green-400 p-4"
       >
-        <div class="skill flex items-center">
-          <!-- TODO: make input limit of 40 chars -->
+        <div>
           <p class="text-3xl">This is 40 chars input for demo purposes</p>
         </div>
-        <button class="bnt">😀</button>
+        <p class="">😀</p>
       </div>
     </main>
   </body>
