fix: change skill length to 35 instead of 40

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <!-- TODO: make input display limit of 40 chars -->
           <input
             placeholder="Insert Skill"
-            maxlength="40"
+            maxlength="35"
             type="text"
             class="skill border-4 border-solid border-green-400 p-2 text-lg"
           />
@@ -42,7 +42,7 @@
         class="flex justify-between border-8 border-t-0 border-solid border-green-400 p-4"
       >
         <div>
-          <p class="text-3xl">This is 40 chars input for demo purposes</p>
+          <p class="text-3xl">35 characters for the demonstration</p>
         </div>
         <p class="">😀</p>
       </div>
