fix: change skill length to 25 from 35

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <div class="flex items-center">
           <input
             placeholder="Insert Skill"
-            maxlength="35"
+            maxlength="25"
             type="text"
             class="skill border-4 border-solid border-green-400 p-2 text-lg"
           />
@@ -41,7 +41,7 @@
         class="flex justify-between border-8 border-t-0 border-solid border-green-400 p-4"
       >
         <div>
-          <p class="text-3xl">35 characters for the demonstration</p>
+          <p class="text-3xl">25 character for the demo</p>
         </div>
         <p>😀</p>
       </div>
