fix: center skill

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
       <div
         class="flex justify-between border-8 border-t-0 border-solid border-green-400 p-4"
       >
-        <div>
+        <div class="flex items-center">
           <p class="text-3xl">25 character for the demo</p>
         </div>
         <p>😀</p>
