--- a/src/index.html
+++ b/src/index.html
@@ -14,22 +14,28 @@
     <!-- TODO: let people be able to download/upload their answers -->
     <main class="p-4">
       <div
-        class="flex justify-between border-8 border-solid border-green-400 p-4"
+        class="flex sm:flex-row flex-col sm:gap-0 gap-3 justify-between border-8 border-solid border-green-400 p-4"
       >
+
+        <!-- Input field -->
         <div class="flex items-center">
           <input
             placeholder="Insert Skill"
             maxlength="25"
             type="text"
-            class="skill border-4 border-solid border-green-400 p-2 text-lg"
+            class="skill w-full border-4 border-solid border-green-400 p-2 text-lg"
           />
         </div>
+
+        <!-- Emoji type selector -->
         <select class="opinion border-4 focus:border-red-500">
           <option value="confident">confident in</option>
           <option value="love">love</option>
           <option value="adore">adore</option>
           <option value="dislike">dislike</option>
         </select>
+
+        <!-- Add button -->
         <button
           class="border-4 border-red-600 p-2 hover:cursor-pointer"
           onclick="addSkill()"
