refactor: change file structure for easier deployment

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../dist/output.css" />
+    <link rel="stylesheet" href="output.css" />
     <script src="script.js"></script>
   </head>
   <body>
